# QtQuick-OpenGL-Widget

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
buildscripts/: FindGLFW.cmake  FindQt6.cmake
src/: OpenGLWidget.cpp  OpenGLWidget.h
